react table expanded column, bug auto resize on mobile device

--- a/src/reactTable/ReactTableBasic.module.scss
+++ b/src/reactTable/ReactTableBasic.module.scss
@@ -1,6 +1,7 @@
 @use '../scss/mixin'as *;
 
 .table-container {
+    box-sizing: border-box;
     padding: 10px;
     width: 100%;
     overflow-y: auto;
